css/index.css
#landing
{
 /*background-color:black;
 height:120vh;*/
}

.logo
{
 width:100%;
}

.logo
{
 width:100%;
}
body
{
	margin: 0;
}
#body
{
 height:100%;
 width:100%; 
 background-image:linear-gradient(#000000, #55489d)
}

#headText
{
 text-align:center;
}

#headText > p
{
 display:inline-block;
 font-family:Gotham, Helvetica, Arial;
 font-size:4vw;
 text-align:center;
 color: white;
 width:80%;
}
@media only screen and (min-width:721px) and (max-width:1080px)
{
 #headText > p
 {
  font-size:2.5vw;
  width:85%;
 }
}

@media only screen and (min-width:1081px)
{
 #headText > p
 {
  font-size:2vw;
  width:90%;
 }
}

#quickLinks
{
 width:80%;
 text-align:center;
 margin-left:auto;
 margin-right:auto;
}

@media only screen and (min-width:721px) and (max-width:1080px)
{
 #quickLinks
 {
  width:85%;
  text-align:center;
  margin-left:auto;
  margin-right:auto;
 }
}

@media only screen and (min-width:1081px)
{
 #quickLinks
 {
  width:90%;
  text-align:center;
  margin-left:auto;
  margin-right:auto;
  margin-top:2vh;
 }
}

#qlGrid
{
 display:grid;
 grid-template-columns:50% 50%;
 justify-content:center;
 grid-template-rows:auto auto auto;
 text-align:center;
}

@media only screen and (min-width:721px) and (max-width:1080px)
{
 #qlGrid
 {
  display:grid;
  grid-template-columns:33% 33% 33%;
  grid-template-rows:auto auto;
  justify-content:center;
  text-align:center;
 }
}

@media only screen and (min-width:1081px)
{
 #qlGrid
 {
  display:grid;
  grid-template-columns:16.66% 16.66% 16.66% 16.66% 16.66% 16.66%;
  grid-template-rows:auto;
  justify-content:center;
 }
}

.qlLogo
{
 width:50%;
 margin-left:auto;
 margin-right:auto;
 margin-bottom:10vh;
}

/*#below
{
 height:100vh;
 background-image:linear-gradient(#000000, #55489d)
}*/

#header
{
width: 100%;
height: 10vw;
display:grid;
text-align:center;
}

@media only screen and (max-width:720px)
{
	#header
	{
		grid-template-columns:100%;
		grid-template-rows:33% 33% 33%;
		height:25vh;
		text-align:center;
	}
}

@media only screen and (min-width:721px)
{
	#header
	{
		grid-template-columns: 33% 33% 33%;
		grid-template-rows:99%;
	}
}

.headerLogo
{
	margin-top:auto;
	margin-bottom:auto;
}

.headerLogo > a > img
{
	width:15vw;
	height:auto;
}

@media only screen and (max-width:720px)
{
	.headerLogo > a > img
{
	width:15vw;
	height:auto;
}
}

/*
.headerLogo > a > img:hover
{
	box-shadow: inset 10px 10px purple;
}
*/

.headerLink
{
	margin-top:0;
	margin-bottom:auto;
}

.headerLink > a > h1
{
	color:white;
    font-family:Gotham, Helvetica, Arial;
	font-size:4vw;
}

@media only screen and (max-width:720px)
{
	.headerLink > a > h1
{
	color:white;
    font-family:Gotham, Helvetica, Arial;
	font-size:5vw;
}
	
}

a:link
{
	text-decoration:none;
	color:black;
}

a:hover > h1
{
	text-decoration:none;
	color:black;
}



a:active
{
	text-decoration:none;
	color:#55489D;
}

a:visited
{
	text-decoration:none;
	color:black;
}

#intro
{
	width:80%;
	margin-left:auto;
	margin-right:auto;
	color:black;
    font-family:Gotham, Helvetica, Arial;
}

#intro > h2
{
	font-size:4vh;
	font-weight:normal;
}

#links
{
 width:80%;
 text-align:center;
 margin-left:auto;
 margin-right:auto;
 margin-top:5vh;
}

@media only screen and (min-width:721px) and (max-width:1080px)
{
 #links
 {
  width:85%;
  text-align:center;
  margin-left:auto;
  margin-right:auto;
  margin-top:5vh;
 }
}

@media only screen and (min-width:1081px)
{
 #links
 {
  width:90%;
  text-align:center;
  margin-left:auto;
  margin-right:auto;
  margin-top:10vh;
 }
}

#linkGrid
{
 display:grid;
 grid-template-columns:100%;
 justify-content:center;
 grid-template-rows:auto auto auto;
 grid-row-gap:20px;
 text-align:center;
}

@media only screen and (min-width:721px) and (max-width:1080px)
{
 #linkGrid
 {
  display:grid;
  grid-template-columns:100%;
  grid-template-rows:auto auto auto;
  grid-row-gap:20px;
  justify-content:center;
  text-align:center;
 }
}

@media only screen and (min-width:1081px)
{
 #linkGrid
 {
  display:grid;
  grid-template-columns:30% 30% 30%;
  grid-template-rows:auto;
  grid-column-gap:20px;
  justify-content:center;
 }
}

.dd
{
 background-color:#A49BD5;
 border-style:solid;
 border-width:3px;
 border-color:black;
 border-radius:10px;
}

.dd > h3
{
 font-family:Gotham, Helvetica, Arial;
 color:black;
 font-size:5vh;
}

.dd > p
{
 font-family:Gotham, Helvetica, Arial;
 color:black;
 font-size:3vh;
}



#footer
{
 width:100%;
 background-color:#55489d;
 height:20vh;
 display:grid;
 grid-template-columns:100%;
 grid-template-rows:33% 33% 33%;
 justify-intro:center;
}

@media only screen and (min-width:1081px)
{
 #footer
 {
  display:grid;
  grid-template-columns:33% 33% 33%;
  grid-template-rows:100%;
  justify-intro:center;
  height:10vh;
 }
}

#dropdowns
{
 width:80%;
 text-align:center;
 margin-left:auto;
 margin-right:auto;
 margin-top:5vh;
}

@media only screen and (min-width:721px) and (max-width:1080px)
{
 #dropdowns
 {
  width:85%;
  text-align:center;
  margin-left:auto;
  margin-right:auto;
  margin-top:5vh;
 }
}

@media only screen and (min-width:1081px)
{
 #dropdowns
 {
  width:90%;
  text-align:center;
  margin-left:auto;
  margin-right:auto;
  margin-top:10vh;
 }
}

#ddGrid
{
 display:grid;
 grid-template-columns:100%;
 justify-content:center;
 grid-template-rows:auto auto auto;
 grid-row-gap:20px;
 text-align:center;
}

@media only screen and (min-width:721px) and (max-width:1080px)
{
 #ddGrid
 {
  display:grid;
  grid-template-columns:100%;
  grid-template-rows:auto auto auto;
  grid-row-gap:20px;
  justify-content:center;
  text-align:center;
 }
}

@media only screen and (min-width:1081px)
{
 #ddGrid
 {
  display:grid;
  grid-template-columns:30% 30% 30%;
  grid-template-rows:auto;
  grid-column-gap:20px;
  justify-content:center;
 }
}

.dd
{
 background-color:#55489d;
 border-style:solid;
 border-width:5px;
 border-color:black;
 border-radius:20px;
}

.dd > h1
{
 font-family:Gotham, Helvetica, Arial;
 color:black;
 font-size:5vh;
}

.dd > p
{
 font-family:Gotham, Helvetica, Arial;
 color:black;
 font-size:3vh;
}


#footer
{
 width:100%;
 background-color:#55489d;
 height:20vh;
 display:grid;
 grid-template-columns:100%;
 grid-template-rows:33% 33% 33%;
 justify-content:center;
}

@media only screen and (min-width:1081px)
{
 #footer
 {
  display:grid;
  grid-template-columns:33% 33% 33%;
  grid-template-rows:100%;
  justify-content:center;
  height:10vh;
 }
}

#footer > div
{
 text-align:center;
}

/*#footer > div:hover
{
 background-color:#757096;
}*/

#footer > div > p > a
{
 color:white;
 font-size:20px;
 font-family:Gotham, Helvetica, Arial;
}

#footer > div > p > a:link
{
 text-decoration:none;
}

#footer > div > p > a:visited
{
 color:white;
 text-decoration:none;
}

#footer > div > p > a:hover
{
 color:#FFFA85;
 text-decoration:none;
}

#footer > div > p > a:active
{
 color:#FFFA85;
 text-decoration:none;
}

